--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -41,12 +41,12 @@
                 {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
             </div>
             <div class="form-group">
-                <label for="genres">Seeking talent?</label>
+                <label for="genres">Seeking venue?</label>
                 {{ form.seeking_venue(autofocus = true) }}
             </div>
             <div class="form-group">
                 <label for="genres">Seeking Description</label>
-                {{ form.website(class_ = 'form-control', placeholder='Seeking Description Here', autofocus = true) }}
+                {{ form.seeking_description(class_ = 'form-control', placeholder='Seeking Description Here', autofocus = true) }}
             </div>
             <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
         </form>
