--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -35,19 +35,23 @@
             </div>
             <div class="form-group">
                 <label for="genres">Facebook Link</label>
-                 {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+                {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
             </div>
             <div class="form-group">
                 <label for="genres">Website</label>
-                 {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+                {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
             </div>
             <div class="form-group">
                 <label for="genres">Image</label>
-                 {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+                {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
             </div>
             <div class="form-group">
                 <label for="genres">Seeking talent?</label>
-                 {{ form.seeking_talent(autofocus = true) }}
+                {{ form.seeking_talent(autofocus = true) }}
+            </div>
+            <div class="form-group">
+                <label for="genres">Seeking Description</label>
+                {{ form.seeking_description(class_ = 'form-control', placeholder='Seeking Description Here', autofocus = true) }}
             </div>
             <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
         </form>
