--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -3,9 +3,18 @@
 {% block content %}
 <div class="row">
 	<div class="col-sm-6">
-		<h1 class="monospace">
-			{{ artist.name }}
-		</h1>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h1 class="monospace">
+                        {{ artist.name }}
+                    </h1>
+                </div>
+                <div class="col-sm-6 buttons-container">
+                    <a href="/venues/{{ artist.id }}/edit" type="button" class="btn btn-primary">Edit</a>
+                    <form action="/artists/{{ artist.id }}/delete" method="POST" id="delete"></form>
+                    <button type="button" class="btn btn-danger" onclick="document.getElementById('delete').submit()">Delete</button>
+                </div>
+            </div>
 		<p class="subtitle">
 			ID: {{ artist.id }}
 		</p>
