Add Joey's http Gifs

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,6 +1,7 @@
 {% extends 'layouts/main.html' %}
 {% block content %}
-  <h1>Sorry ...</h1>
-  <p>There's nothing here!</p>
-  <p><a href="{{url_for('index')}}">Back</a></p>
+    <h1>Sorry ...</h1>
+    <p>There's nothing here!</p>
+    <img src="https://sarcastickled.files.wordpress.com/2014/12/joey4.gif?w=300&h=230" alt="">
+    <p><a href="{{ url_for('index') }}">Back</a></p>
 {% endblock %}
