--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,6 +1,7 @@
 {% extends 'layouts/main.html' %}
 {% block content %}
-<h1>Oops ...</h1>
-<p>Something went wrong.</p>
-<p><a href="{{url_for('index')}}">Back</a></p>
+    <h1>Oops ...</h1>
+    <p>Something went wrong.</p>
+    <img src="https://s3.scoopwhoop.com/anj/wd/425502565.gif" alt="">
+    <p><a href="{{ url_for('index') }}">Back</a></p>
 {% endblock %}
