--- a/templates/pages/show.html
+++ b/templates/pages/show.html
@@ -5,12 +5,24 @@
     <div class="page-header">
         <h1>Fyyur Search!</h1>
     </div>
-    <p class="lead"> Show Search </p>
+    <p class="lead"> Number of search results for "{{ search_term }}": {{ results.count }}"</p>
 
+    <div class="row">
+    {%for show in results.data %}
+    <div class="col-sm-4">
+        <div class="tile tile-show">
+            <img src="{{ show.artist_image_link }}" alt="Artist Image" />
+            <h4>{{ show.start_time|datetime('full') }}</h4>
+            <h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
+            <p>playing at</p>
+            <h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
+        </div>
+    </div>
+    {% endfor %}
+</div>
     <ul class="nav nav-pills">
-        <li class="active"><a>Shows</a></li>
+        <li class="active"><a href="/shows">Shows</a></li>
     </ul>
-
 {#    Todo implement show search frontend #}
 
 {% endblock %}
